compiler/testData/asJava/lightClasses/compilationErrors/ActualTypeAliasCustomJvmPackageName.java
@kotlin.jvm.JvmPackageName(name = "a.b.c")
public final class ActualTypeAliasCustomJvmPackageNameKt {
}